service/tests/models/snapshots/payment_attempts/attaching_the_same_checkout_session_is_idempotent@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: "(attached, replayed)"
---
(
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "session_created",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: Some(
            "cs_test_idempotent",
        ),
        stripe_payment_intent_id: None,
        checkout_url: Some(
            "https://checkout.stripe.com/c/pay/test-session",
        ),
        expires_at: Some(
            DATE,
        ),
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: None,
    },
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "session_created",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: Some(
            "cs_test_idempotent",
        ),
        stripe_payment_intent_id: None,
        checkout_url: Some(
            "https://checkout.stripe.com/c/pay/test-session",
        ),
        expires_at: Some(
            DATE,
        ),
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: None,
    },
)
