service/tests/models/snapshots/payment_attempts/creates_one_active_attempt_per_order@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: "(attempt, duplicate)"
---
(
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "initiated",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: None,
        stripe_payment_intent_id: None,
        checkout_url: None,
        expires_at: None,
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: None,
    },
    Err(
        (
            "payment_in_progress",
            "This order already has a payment in progress",
        ),
    ),
)
