service/tests/models/snapshots/payment_attempts/customer_cannot_find_another_customers_checkout_session@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: result
---
Err(
    PaymentAttemptNotFound,
)
