service/tests/models/snapshots/payment_attempts/expiration_releases_reserved_inventory_exactly_once@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: "(expired, replayed, stock_before, stock_reserved, stock_after, state,)"
---
(
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "expired",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: Some(
            "cs_test_expiry",
        ),
        stripe_payment_intent_id: None,
        checkout_url: Some(
            "https://checkout.stripe.com/c/pay/test-session",
        ),
        expires_at: Some(
            DATE,
        ),
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: Some(
            DATE,
        ),
    },
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "expired",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: Some(
            "cs_test_expiry",
        ),
        stripe_payment_intent_id: None,
        checkout_url: Some(
            "https://checkout.stripe.com/c/pay/test-session",
        ),
        expires_at: Some(
            DATE,
        ),
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: Some(
            DATE,
        ),
    },
    32,
    30,
    32,
    (
        "cancelled",
        "failed",
        "cancelled",
    ),
)
