service/tests/models/snapshots/payment_attempts/expired_checkout_session_does_not_expose_redirect_url@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: result
---
Ok(
    CheckoutSessionResponse {
        order_pid: PID,
        order_status: "pending",
        payment_status: "pending",
        attempt_status: "session_created",
        checkout_url: None,
        expires_at: Some(
            DATE,
        ),
    },
)
