service/tests/models/snapshots/payment_attempts/failed to succeeded@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: result
---
Err(
    (
        "invalid_payment_transition",
        "Payment cannot transition from failed to succeeded",
    ),
)
