service/tests/models/snapshots/payment_attempts/late_expiry_cannot_revert_a_successful_payment@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: "(succeeded, after_expiry, stock_reserved, stock_after, state,)"
---
(
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "succeeded",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: Some(
            "cs_test_paid_then_expired",
        ),
        stripe_payment_intent_id: Some(
            "pi_test_paid",
        ),
        checkout_url: Some(
            "https://checkout.stripe.com/c/pay/test-session",
        ),
        expires_at: Some(
            DATE,
        ),
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: Some(
            DATE,
        ),
    },
    PaymentAttempt {
        id: ID,
        pid: PID,
        order_id: ID,
        provider: "stripe",
        status: "succeeded",
        amount: 179.98,
        currency: "USD",
        stripe_checkout_session_id: Some(
            "cs_test_paid_then_expired",
        ),
        stripe_payment_intent_id: Some(
            "pi_test_paid",
        ),
        checkout_url: Some(
            "https://checkout.stripe.com/c/pay/test-session",
        ),
        expires_at: Some(
            DATE,
        ),
        failure_code: None,
        failure_message: None,
        created_at: DATE,
        updated_at: DATE,
        completed_at: Some(
            DATE,
        ),
    },
    30,
    30,
    (
        "confirmed",
        "paid",
        "unfulfilled",
    ),
)
