service/tests/models/snapshots/payment_attempts/payment_attempt_error_metadata@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: metadata
---
[
    (
        "payment_in_progress",
        None,
        409,
        "This order already has a payment in progress",
    ),
    (
        "payment_attempt_not_found",
        None,
        404,
        "Payment attempt does not exist",
    ),
    (
        "invalid_payment_transition",
        None,
        409,
        "Payment cannot transition from succeeded to expired",
    ),
]
