service/tests/models/snapshots/payment_attempts/succeeded to failed@payment_attempts.snap
---
source: tests/models/payment_attempts.rs
expression: result
---
Err(
    (
        "invalid_payment_transition",
        "Payment cannot transition from succeeded to failed",
    ),
)
